<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".fragments.MainFragment">

    <FrameLayout
        android:id="@+id/firsthalf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/light_light_gray"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/recylcer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/progressBar">

        <TextView
            android:id="@+id/halfIdentifyer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:fontFamily="@font/halvetica_neue_bold"
            android:text="1st Half"
            android:textColor="@color/gray2"
            android:textSize="10sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="2dp"
            android:fontFamily="@font/halvetica_neue_bold"
            android:textColor="@color/gray2"
            android:textSize="10sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="SmallSp" />

    </FrameLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recylcer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firsthalf" />

    <TextView
        android:id="@+id/dateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textColor="@color/main_color"
        android:fontFamily="@font/halvetica_neue_regular"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/fieldTextView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/fieldTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/halvetica_neue_regular"
        android:textColor="@color/gray2"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/dateTextView"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/teamFirstImage"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="28dp"
        android:src="@mipmap/placeholder"
        app:layout_constraintBottom_toTopOf="@id/firstTeamName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateTextView" />

    <ImageView
        android:id="@+id/firstFavourite"
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/ic_favourite"
        app:layout_constraintBottom_toBottomOf="@+id/teamFirstImage"
        app:layout_constraintEnd_toStartOf="@+id/teamFirstImage"
        app:layout_constraintTop_toTopOf="@+id/teamFirstImage" />

    <ImageView
        android:id="@+id/secondFavourite"
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:layout_marginStart="16dp"
        android:src="@drawable/ic_favourite"
        app:layout_constraintBottom_toBottomOf="@+id/teamSecondImage"
        app:layout_constraintStart_toEndOf="@+id/teamSecondImage"
        app:layout_constraintTop_toTopOf="@+id/teamSecondImage" />


    <ImageView
        android:id="@+id/teamSecondImage"
        android:layout_width="55dp"
        android:layout_height="50dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="50dp"
        android:src="@mipmap/placeholder"
        app:layout_constraintBottom_toTopOf="@id/secondTeamName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fieldTextView" />

    <TextView
        android:id="@+id/scoreTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="60dp"
        android:fontFamily="@font/halvetica_neue_regular"
        android:textColor="@color/black"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@+id/duration"
        app:layout_constraintEnd_toStartOf="@+id/teamSecondImage"
        app:layout_constraintStart_toEndOf="@+id/teamFirstImage"
        app:layout_constraintTop_toBottomOf="@+id/dateTextView"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:textColor="@color/gray2"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/scoreTextView"
        app:layout_constraintStart_toStartOf="@+id/scoreTextView"
        app:layout_constraintTop_toBottomOf="@id/scoreTextView" />

    <TextView
        android:id="@+id/firstTeamName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/hakvetuca_neue_medium"
        android:text="@string/dots"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/teamFirstImage"
        app:layout_constraintStart_toStartOf="@+id/teamFirstImage"
        app:layout_constraintTop_toBottomOf="@+id/teamFirstImage" />

    <TextView
        android:id="@+id/secondTeamName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/hakvetuca_neue_medium"
        android:text="@string/dots"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/teamSecondImage"
        app:layout_constraintStart_toStartOf="@+id/teamSecondImage"
        app:layout_constraintTop_toBottomOf="@+id/teamSecondImage" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="12dp"
        android:backgroundTint="#f6f6f6"
        android:padding="8dp"
        app:cardCornerRadius="40dp"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/duration">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/overview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="25dp"
                android:fontFamily="@font/halvetica_neue_regular"
                android:paddingStart="20dp"
                android:paddingTop="13dp"
                android:paddingBottom="13dp"
                android:text="@string/overview"
                android:textColor="@color/text_gray"
                android:textSize="13sp"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/statistic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:layout_marginEnd="25dp"
                android:fontFamily="@font/halvetica_neue_regular"
                android:paddingTop="13dp"
                android:paddingBottom="13dp"
                android:text="@string/statistic"
                android:textColor="@color/text_gray"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/lineup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:fontFamily="@font/halvetica_neue_regular"
                android:paddingTop="13dp"
                android:paddingEnd="20dp"
                android:paddingBottom="13dp"
                android:text="@string/line_up"
                android:textColor="@color/text_gray"
                android:textSize="13sp" />
        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.cardview.widget.CardView>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="5dp"
        android:layout_marginTop="12dp"
        android:focusable="false"
        android:progressDrawable="@drawable/progressbar"
        app:layout_constraintEnd_toEndOf="@+id/cardView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/cardView"
        app:layout_constraintTop_toBottomOf="@id/ballPossesion" />

    <TextView
        android:id="@+id/firstPossesion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/halvetica_neue_regular"
        android:textColor="@color/text_gray"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="@+id/ballPossesion"
        app:layout_constraintStart_toStartOf="@+id/progressBar"
        app:layout_constraintTop_toTopOf="@+id/ballPossesion" />

    <TextView
        android:id="@+id/secondPossesion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/halvetica_neue_regular"
        android:textColor="@color/text_gray"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="@+id/ballPossesion"
        app:layout_constraintEnd_toEndOf="@+id/progressBar"
        app:layout_constraintTop_toTopOf="@+id/ballPossesion" />

    <TextView
        android:id="@+id/ballPossesion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/halvetica_neue_regular"
        android:text="@string/ball_possesion"
        android:textColor="@color/text_gray"
        android:textSize="13sp"
        app:layout_constraintEnd_toStartOf="@+id/secondPossesion"
        app:layout_constraintStart_toEndOf="@+id/firstPossesion"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

</androidx.constraintlayout.widget.ConstraintLayout>